--- a/app.json
+++ b/app.json
@@ -1,11 +1,11 @@
 {
   "pages": [
+    "pages/discover/discover",
     "pages/index/index",
     "pages/logs/logs",
     "pages/detail/detail",
     "pages/shop-car/shop-car",
     "pages/order/order",
-    "pages/discover/discover",
     "pages/science/science",
     "pages/science_detail/science_detail",
     "pages/questions/questions",
@@ -24,27 +24,27 @@
   },
   "tabBar": {
     "color": "#6e6d6b",
-    "selectedColor": "#e64340",
+    "selectedColor": "#13227a",
     "borderStyle": "white",
     "backgroundColor": "#fff",
     "box-shadow": "0 0 6px 0",
     "list": [
       {
-        "pagePath": "pages/index/index",
-        "iconPath": "pages/images/nav/icon_tab_home_n.png",
-        "selectedIconPath": "pages/images/nav/icon_tab_home_s.png",
+        "pagePath": "pages/discover/discover",
+        "iconPath": "pages/images/icon_off/homepage.png",
+        "selectedIconPath": "pages/images/icon_on/homepage_fill.png",
         "text": "首页"
       },
       {
-        "pagePath": "pages/discover/discover",
-        "iconPath": "pages/images/nav/icon_tab_eye_n.png",
-        "selectedIconPath": "pages/images/nav/icon_tab_eye_s.png",
-        "text": "发现"
+        "pagePath": "pages/index/index",
+        "iconPath": "pages/images/icon_off/service.png",
+        "selectedIconPath": "pages/images/icon_on/service_fill.png",
+        "text": "商城"
       },
       {
         "pagePath": "pages/admin/admin",
-        "iconPath": "pages/images/nav/icon_tab_personal_n.png",
-        "selectedIconPath": "pages/images/nav/icon_tab_personal_s.png",
+        "iconPath": "pages/images/icon_off/people.png",
+        "selectedIconPath": "pages/images/icon_on/people_fill.png",
         "text": "我的"
       }
     ]
